--- a/resume.html
+++ b/resume.html
@@ -9,7 +9,7 @@
 
     <h1>My Resume</h1>
 
-    <iframe src="Jack_Youssef_Resume.pdf" width="800" height="600" style="border: none;"></iframe>
+    <iframe src="Jack_Youssef_Resume.pdf" width="100%" height="100%" style="border: none;"></iframe>
 
 </body>
 </html>
