--- a/index.html
+++ b/index.html
@@ -1,7 +1,72 @@
 <!DOCTYPE html>
 <html>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="styles.css">
+    <title>Jack Youssef's Portfolio</title>
+</head>
 <body>
-<h1>Jack Youssef</h1>
-<a href="resume.html">My Resume</a>
+<!-- Header section -->
+<div class="header">
+    <div class="container">
+      <div class="logo">Jack Youssef</div>
+      <ul class="nav">
+        <li><a href="#home">Home</a></li>
+        <li><a href="#contact">Contact</a></li>
+        <li><a href="#projects">Projects</a></li>
+        <li><a href="pages/resume.html">My Resume</a></li>
+      </ul>
+    </div>
+  </div>
+
+  <!-- Hero section -->
+  <div class="hero" id="home">
+    <div class="container">
+      <div class="content">
+        <img src="media/headshot_photo.png" class="headshot">
+        <h1>Hi, I'm Jack</h1>
+        <p>I am a passionate and driven Computer Science student with a previous 
+            Finance degree and interests in various technical domains.</p>
+        <div class="contact">
+        <a href="https://github.com/jacky0ussef"><img src="media/github-mark.png" alt="github.com/jacky0ussef" class="social-button"></a>
+        <a href="https://www.linkedin.com/in/jack-youssef"><img src="media/linkedin_logo.png" alt="linkedin.com/in/jack-youssef" class="social-button"></a>
+        <a href="mailto:jackyoussef@icloud.com"><img src="media/mail_logo.png" alt="jackyoussef@icloud.com" class="social-button"></a>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Projects section -->
+  <div class="projects" id="projects">
+    <div class="container">
+      <div class="title">My Projects</div>
+      <div class="row">
+        <div class="col">
+          <div class="card">
+            <div class="image">
+              <img src="project1.jpg"> <!-- Replace with your own image -->
+            </div>
+            <div class="content">
+              <div class="name">Project 1</div>
+              <div class="desc">A brief description.</div>
+              <a href="#" class="link">View Project</a> <!-- Replace with your own link -->
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <div class="image">
+              <img src="project2.jpg"> <!-- Replace with your own image -->
+            </div>
+            <div class="content">
+              <div class="name">Project 2</div>
+              <div class="desc">A brief description.</div>
+              <a href="#" class="link">View Project</a> <!-- Replace with your own link -->
+            </div>
+          </div>
+        </div>
+        <div class="col"></div>
+
 </body>
 </html>
