edited contact links, some formatting

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,16 +9,16 @@
 <body>
 <!-- Header section -->
 <div class="header">
-    <div class="container">
-      <div class="logo">Jack Youssef</div>
-      <ul class="nav">
-        <li><a href="#home">Home</a></li>
-        <li><a href="#contact">Contact</a></li>
-        <li><a href="#projects">Projects</a></li>
-        <li><a href="pages/resume.html">My Resume</a></li>
-      </ul>
-    </div>
+  <div class="container">
+    <div class="logo">Jack Youssef</div>
+    <ul class="nav">
+      <li><a href="index.html">Home</a></li>
+      <li><a href="#contact">Contact</a></li>
+      <li><a href="#projects">Projects</a></li>
+      <li><a href="pages/resume.html">My Resume</a></li>
+    </ul>
   </div>
+</div>
 
   <!-- Hero section -->
   <div class="hero" id="home">
@@ -30,7 +30,7 @@
             Finance degree and interests in various technical domains.</p>
         <div class="contact">
         <a href="https://github.com/jacky0ussef"><img src="media/github-mark.png" alt="github.com/jacky0ussef" class="social-button"></a>
-        <a href="https://www.linkedin.com/in/jack-youssef"><img src="media/linkedin_logo.png" alt="linkedin.com/in/jack-youssef" class="social-button"></a>
+        <a href="https://www.linkedin.com/in/jack-youssef"><img src="media/linkedin_logo.png" alt="linkedin.com/in/jack-youssef" class="social-button" id="linkedin-logo"></a>
         <a href="mailto:jackyoussef@icloud.com"><img src="media/mail_logo.png" alt="jackyoussef@icloud.com" class="social-button"></a>
         </div>
       </div>
